@@ -1,3 +1,7 @@
+2010-04-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* generic/tclCmdMZ.c (Tcl_RegexpObjCmd): fixed object leak.
+
 2010-04-02  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
 
 	* generic/tclStringObj.c: (SetStringFromAny): avoid trampling
